# paid-bus

./: .dprint.json  Cargo.toml  README.md
paid-bus-core/: Cargo.toml  build.rs
paid-bus-core/src/: main.rs  proto.rs
proto/: ticket.proto
