[package]
name = "paid-bus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.1"

[build-dependencies]
tonic-build = "0.9.2"
